Main UI
- Add new pill-shaped buttons and controls
- Improve Electron dragbar layering
- New button press effect on main UI

Reader
- Keep window controls visible in reader view
- Improve responsiveness of seek bar
- Only update pages when seek bar stops

Build
- 

Fixes
- Fix z-index issue when scaling thumbnails
- Fix "y:" search for time range
- Fix drag bar when in reader view